objects/OUV_OrderRequestLineItem__c.object
<CustomObject>
    <label>ATO Request Line Item</label>
    <nameField>
        <displayFormat>Vehicle-{00000}</displayFormat>
        <label>ATO Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ATO Request Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>OUV_Fleet__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Fleet</label>
        <referenceTo>OUV_Fleet__c</referenceTo>
        <relationshipLabel>ATO Request Line Items</relationshipLabel>
        <relationshipName>ATO_Request_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_Owner__c</fullName>
        <formula>OUV_OrderRequest__r.Owner:User.FirstName + &quot; &quot; + OUV_OrderRequest__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Driver__c</fullName>
        <formula>OUV_OrderRequest__r.OUV_User__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The JLR CDSID of the person requesting, using or who is responsible for the vehicle whilst on loan.</inlineHelpText>
        <label>Internal JLR Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Market__c</fullName>
        <formula>TEXT(OUV_OrderRequest__r.OUV_Market__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Build_Phase__c</fullName>
        <label>Build Phase</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Volume</fullName>
                    <default>true</default>
                    <label>Volume</label>
                </value>
                <value>
                    <fullName>TT1</fullName>
                </value>
                <value>
                    <fullName>TT2</fullName>
                </value>
                <value>
                    <fullName>TT3</fullName>
                </value>
                <value>
                    <fullName>PP1</fullName>
                </value>
                <value>
                    <fullName>PP2</fullName>
                </value>
                <value>
                    <fullName>PP3</fullName>
                </value>
                <value>
                    <fullName>IB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_FullVIN__c</fullName>
        <formula>OUV_VistaVehicle__r.OUV_Full_Vin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full VIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Options__c</fullName>
        <label>Option(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OUV_ShortVIN__c</fullName>
        <formula>OUV_VistaVehicle__r.OUV_Short_VIN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Short VIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_TrimCode__c</fullName>
        <formula>OUV_VistaVehicle__r.OUV_Trim_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trim Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_ModelCode__c</fullName>
        <formula>&quot;a&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_PaintCode__c</fullName>
        <formula>OUV_VistaVehicle__r.OUV_Paint_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Paint Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_OUVVehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OUV Vehicle</label>
        <referenceTo>OUV_Vehicle__c</referenceTo>
        <relationshipName>OUV_OrderRequestLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_StatusCode__c</fullName>
        <formula>TEXT(OUV_VistaVehicle__r.OUV_Status_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_ReworkRoute__c</fullName>
        <formula>TEXT( OUV_OrderRequest__r.OUV_ReworkRoute__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rework Route</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Manufacturer__c</fullName>
        <formula>TEXT( OUV_VistaVehicle__r.Manufacturer__c )</formula>
        <label>Manufacturer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_OrderNumber1__c</fullName>
        <formula>OUV_VistaVehicle__r.OUV_Order_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_OrderRequest__c</fullName>
        <label>ATO Number</label>
        <referenceTo>OUV_OrderRequest__c</referenceTo>
        <relationshipLabel>ATO Request Line Items</relationshipLabel>
        <relationshipName>OUV_OrderRequestLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OUV_VistaVehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vista Vehicle</label>
        <referenceTo>Asset</referenceTo>
        <relationshipName>OUV_OrderRequestLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_DisposalRoute__c</fullName>
        <formula>TEXT( OUV_OrderRequest__r.OUV_DisposalRoute__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disposal Route</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_ATORequestType__c</fullName>
        <formula>TEXT(OUV_OrderRequest__r.OUV_OrderRequestType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ATO Request Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_AddToFleetDate__c</fullName>
        <formula>OUV_OrderRequest__r.OUV_AddToFleetDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proposed Add To Fleet Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_CategoryLevel1__c</fullName>
        <formula>TEXT( OUV_OrderRequest__r.OUV_Level1Category__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OUV Category Level 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_CategoryLevel2__c</fullName>
        <formula>TEXT( OUV_OrderRequest__r.OUV_Level2Category__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OUV Category Level 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_CategoryLevel3__c</fullName>
        <formula>TEXT( OUV_OrderRequest__r.OUV_Level3Category__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OUV Category Level 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_DisposalMethod__c</fullName>
        <formula>TEXT( OUV_OrderRequest__r.OUV_DisposalRoute__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disposal Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_TrimDescription__c</fullName>
        <formula>OUV_VistaVehicle__r.OUV_Trim_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trim Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Cost_Accessory__c</fullName>
        <inlineHelpText>Locally incurred costs including locally fitted accessories.</inlineHelpText>
        <label>Local Cost &amp; Accessory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OUV_PaintDescription__c</fullName>
        <formula>OUV_VistaVehicle__r.OUV_Paint_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Paint Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_ShortDescription__c</fullName>
        <formula>OUV_OrderRequest__r.OUV_ShortDescription__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quick Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_VehiclePriceFlow__c</fullName>
        <formula>OUV_VistaVehicle__r.OUV_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OUV_VehiclePriceFlow</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_StatusDescription__c</fullName>
        <formula>OUV_VistaVehicle__r.OUV_Status_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_TargetUtilisation__c</fullName>
        <formula>OUV_OrderRequest__r.OUV_TargetUtilisationPercentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Utilisation Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OUV_InitialRetailPrice__c</fullName>
        <label>Initial Retail Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OUV_OrderJustification__c</fullName>
        <label>Business Justification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OUV_ProductDescription__c</fullName>
        <formula>OUV_VistaVehicle__r.OUV_Vehicle_Line__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_ProposedHandInDate__c</fullName>
        <formula>OUV_OrderRequest__r.OUV_ProposedHandedInDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proposed Hand In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_ATOLineItemRecordName__c</fullName>
        <formula>LEFT(OUV_VistaVehicle__r.OUV_Product_Description__c, 80)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ATO Line Item Record Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_FinanceClassification__c</fullName>
        <defaultValue>&quot;Inventory&quot;</defaultValue>
        <label>Finance Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inventory</fullName>
                </value>
                <value>
                    <fullName>Fixed Assets</fullName>
                </value>
                <value>
                    <fullName>Intangible Assets</fullName>
                </value>
                <value>
                    <fullName>Provisioned Vehicles</fullName>
                </value>
                <value>
                    <fullName>Expensed Vehicle</fullName>
                </value>
                <value>
                    <fullName>Leased Vehicles</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_TransmissionDescription__c</fullName>
        <formula>OUV_VistaVehicle__r.OUV_Transmission_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transmission Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_ReplacementVehicleMileage__c</fullName>
        <formula>OUV_OrderRequest__r.OUV_ReplacementVehicleMileageNew__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Replacement Vehicle Mileage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Temporary_Import_Vehicles__c</fullName>
        <description>Additional information relating to vehicles on temporary import</description>
        <inlineHelpText>Additional information relating to vehicles on temporary import</inlineHelpText>
        <label>Temporary Import Vehicles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_CostCentreAccountingCharge__c</fullName>
        <label>Cost Centre</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Total_Initial_Retail_Price__c</fullName>
        <formula>(Local_Cost_Accessory__c + OUV_InitialRetailPrice__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Initial Retail Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OUV_VehicleLocalIntegrationCost__c</fullName>
        <formula>OUV_OrderRequest__r.OUV_VehicleLocalIntegrationCost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Locally incurred costs including locally fitted accessories.</inlineHelpText>
        <label>Vehicle Local Integration Cost</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_ReplacementVehicleDescription__c</fullName>
        <formula>OUV_OrderRequest__r.OUV_ReplacementVehicleDescriptionNew__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Replacement Vehicle Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_VehicleLocalIntergrationCosts__c</fullName>
        <label>Vehicle Local Intergration Costs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OUV_ReplacementVehicleVINOrderNumber__c</fullName>
        <formula>OUV_OrderRequest__r.OUV_ReplacementVehicleVINOrderNumberNew__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Replacement Vehicle VIN / Order Number</label>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>OUV_ATO_Request_Line_Item_Editable</fullName>
        <active>true</active>
        <description>This is the standard ATO Request type available to users</description>
        <label>OUV ATO Request Line Item Editable</label>
    </recordTypes>
    <recordTypes>
        <fullName>OUV_ATO_Request_Line_Item_READ_ONLY</fullName>
        <active>true</active>
        <description>This is a read only RT for ATO Request</description>
        <label>OUV ATO Request Line Item READ ONLY</label>
    </recordTypes>
</CustomObject>